--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 % Title Formatting
 \titleformat{\section}{\large\bfseries}{\thesection}{1em}{}
 
-\title{Memory Efficient PageRank on Apache Spark}
+\title{Memory-efficient PageRank on Apache Spark\\ via Random Walks}
 \author{Nina Michalek\\TU Berlin, DOS}
 \date{April 25, 2025}
 
@@ -27,12 +27,18 @@
 
 \section{Introduction}
  Graphs are widely used to represent relationships between different entities for applications such as social networks and website connections \cite{zhang_distributed_2021}. 
-To analyze these, numerous graph algorithms have been proposed \cite{malewicz_pregel_2010}\cite{low_distributed_2012}\cite{koch_empirical_2016}. Among the most influential is PageRank \cite{page_pagerank_1999}, an iterative algorithm introduced by Google to determine website importance. PageRank has become a common component within specialized graph processing frameworks. These systems are designed to efficiently execute iterative algorithms, making graph analytics more practical. An example of such a system is GraphX \cite{xin_graphx_2013}, built upon Apache Spark \cite{xin_graphx_2013} a popular open-source distributed dataflow system that that enables large-scale data processing \cite{shanahan_large_2015}. GraphX acts as a graph processing framework that aims to bridge the gap between system-level optimisations in specialised graph engines and the flexible dataflow operations available in general-purpose systems \cite{jin_software_2022}. However, recent research has addressed the huge memory overhead in GraphX's PageRank algorithm due to the data representation and proposes approximate computation to reduce memory consumption \cite{wu_efficient_2024}. 
+A wide range of graph algorithms has been developed to analyze these structures. \cite{malewicz_pregel_2010}\cite{low_distributed_2012}\cite{koch_empirical_2016}. Among the most influential is PageRank \cite{page_pagerank_1999}, an iterative algorithm introduced by Google to determine website importance. Facing the challenge of information retrieval resulting from the rapid expansion of the world wide web in the late 1990s, PageRank provided a method that ranks web pages by measuring their relative importance based on the graph of the web. In this graph, the nodes are the web pages, while the edges represent links. An outedge is a link on a page and an inedge is a backlink. The core idea is that a page is considered important if it has inedges from important pages.\par
+The PageRank value of a web page is calculated iteratively based on the values of all the pages that link to it. Linking pages pass a fraction of their own value, proportional to their number of outbound links, to the target page. This calculation includes a damping factor that converges to a stable probability distribution, effectively representing the likelihood that a random user lands on a particular page.
+Today PageRank is used, not only in search engines, but in a wide range of applications such as social networks \cite{wu_efficient_2024}. The latter utilizes PageRank to identify influential users, rank content in feeds and recommend people \cite{weng_twitterrank_2010}.\par
+Despite its wide applicability, a fundamental challenge lies in the graph representation \cite{liu_fast_2015}. Typically, graphs are represented in matrices, which in the worst case require up to $O(n^2)$ of memory, where $n$ is the number of web pages \cite{wu_efficient_2024}. The transition matrix, containing the probabilities of moving from one web page to another in a single step, presents a significant memory challenge as graph sizes grow.\par 
+To address the demands of graph analytics, specialized graph processing frameworks have been introduced. These systems are designed to efficiently execute iterative algorithms, making graph analytics more practical. An example of such a system is GraphX \cite{xin_graphx_2013}, built upon Apache Spark \cite{xin_graphx_2013} a popular open-source distributed dataflow system that enables large-scale data processing \cite{shanahan_large_2015}. GraphX acts as a graph processing framework that aims to bridge the gap between system-level optimisations in specialised graph engines and the flexible dataflow operations available in general-purpose systems \cite{jin_software_2022}. However, even with such frameworks the memory usage of algorithms like PageRank can be huge. Therefore, recent research has tried to address the memory overhead in GraphX's PageRank algorithm due to the data representation and proposes approximate computation to reduce memory consumption \cite{wu_efficient_2024}. 
+
+
  
 
-\section{Problem Description}
-The rapid expansion of the World Wide Web in the late 1990s posed a significant challenge to information retrieval as millions of pages made finding relevant and authoritative information increasingly difficult \cite{page_pagerank_1999}. With the launch of Google in 1998, PageRank was introduced as a core component of the search engine \cite{page_pagerank_1999}. PageRank is an algorithm that ranks web pages by measuring their relative importance based on the graph of the web \cite{page_pagerank_1999}. The nodes of the graph are the web pages, while the edges represent links. An outedge is a link on a page and an inedge is a backlink \cite{page_pagerank_1999}. A page is considered important if it has inedges from important pages. The value of a web page is calculated recursively based on the values of all the pages that link to it. Linking pages pass a fraction of their own value, proportional to their number of outbound links, to the target page. This is an iterative calculation with a damping factor that converges to a stable probability distribution \cite{page_pagerank_1999}.
-Today PageRank is used, not only in search engines, but in a wide range of applications such as social networks \cite{wu_efficient_2024}. The latter utilizes PageRank to identify influential users, rank content in feeds and recommend people \cite{weng_twitterrank_2010}. Despite its wide applicability, a fundamental challenge lies in the graph representation \cite{liu_fast_2015}. Typically, graphs are represented in matrices, which in the worst case require up to $O(n^2)$ of memory, where $n$ is the number of web pages \cite{wu_efficient_2024}. The transition matrix, containing the probabilities of moving from one web page to another in a single step, presents a significant memory challenge as graph sizes grow. 
+%\section{Problem Description}
+%The rapid expansion of the World Wide Web in the late 1990s posed a significant challenge to information retrieval as millions of pages made finding relevant and authoritative information increasingly difficult \cite{page_pagerank_1999}. With the launch of Google in 1998, PageRank was introduced as a core component of the search engine. PageRank is an algorithm that ranks web pages by measuring their relative importance based on the graph of the web. The nodes of the graph are the web pages, while the edges represent links. An outedge is a link on a page and an inedge is a backlink. A page is considered important if it has inedges from important pages. The value of a web page is calculated recursively based on the values of all the pages that link to it. Linking pages pass a fraction of their own value, proportional to their number of outbound links, to the target page. This is an iterative calculation with a damping factor that converges to a stable probability distribution.
+%Today PageRank is used, not only in search engines, but in a wide range of applications such as social networks \cite{wu_efficient_2024}. The latter utilizes PageRank to identify influential users, rank content in feeds and recommend people \cite{weng_twitterrank_2010}. Despite its wide applicability, a fundamental challenge lies in the graph representation \cite{liu_fast_2015}. Typically, graphs are represented in matrices, which in the worst case require up to $O(n^2)$ of memory, where $n$ is the number of web pages \cite{wu_efficient_2024}. The transition matrix, containing the probabilities of moving from one web page to another in a single step, presents a significant memory challenge as graph sizes grow. 
 
 
 
